fix: stops Questions component from being too small

--- a/src/client/styles/screen.scss
+++ b/src/client/styles/screen.scss
@@ -5,8 +5,6 @@
 	padding: 0 2rem 1rem 2rem;
 
 	@screen md {
-		@apply .flex-row;
-
 		padding: 0 8rem 2rem 8rem;
 	}
 }
